@@ -32,10 +32,27 @@ import org.apache.pinot.tools.admin.PinotAdministrator;
 import org.apache.pinot.tools.admin.command.QuickstartRunner;
 
 
+/// The basic Realtime/Streaming Quickstart.
+///
+/// This quickstart bootstraps every stream example table and demonstrates the stream-side features that used to
+/// have a dedicated quickstart each: JSON indexes, complex type handling, full upsert, partial upsert and upsert
+/// with a JSON index. The types those quickstarts used to own are kept as deprecated aliases.
 public class RealtimeQuickStart extends QuickStartBase {
+  private static final List<String> DEPRECATED_TYPES =
+      List.of("UPSERT", "UPSERT_JSON_INDEX", "UPSERT-JSON-INDEX", "PARTIAL_UPSERT", "PARTIAL-UPSERT",
+          "REALTIME_JSON_INDEX", "REALTIME-JSON-INDEX", "STREAM_JSON_INDEX", "STREAM-JSON-INDEX",
+          "REALTIME_COMPLEX_TYPE", "REALTIME-COMPLEX-TYPE", "STREAM_COMPLEX_TYPE", "STREAM-COMPLEX-TYPE");
+
   @Override
   public List<String> types() {
-    return Arrays.asList("REALTIME", "STREAM");
+    List<String> types = new ArrayList<>(List.of("REALTIME", "STREAM"));
+    types.addAll(DEPRECATED_TYPES);
+    return types;
+  }
+
+  @Override
+  public List<String> deprecatedTypes() {
+    return DEPRECATED_TYPES;
   }
 
   public static void main(String[] args)
@@ -48,7 +65,7 @@ public class RealtimeQuickStart extends QuickStartBase {
 
   @Override
   protected Map<String, Object> getConfigOverrides() {
-    Map<String, Object> configOverrides = new HashMap<>();
+    Map<String, Object> configOverrides = new HashMap<>(super.getConfigOverrides());
     configOverrides.put(CommonConstants.Server.CONFIG_OF_ENABLE_THREAD_CPU_TIME_MEASUREMENT, true);
     return configOverrides;
   }
@@ -56,63 +73,118 @@ public class RealtimeQuickStart extends QuickStartBase {
   @Override
   public void runSampleQueries(QuickstartRunner runner)
       throws Exception {
-    String q1 = "select count(*) from meetupRsvp limit 1";
-    printStatus(Color.YELLOW, "Total number of documents in the table");
-    printStatus(Color.CYAN, "Query : " + q1);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q1)));
-    printStatus(Color.GREEN, "***************************************************");
+    runMeetupRsvpQueries(runner);
+    runJsonIndexQueries(runner);
+    runComplexTypeQueries(runner);
+    runUpsertQueries(runner);
+    runUpsertJsonIndexQueries(runner);
+    runPartialUpsertQueries(runner);
+    runFineFoodReviewsQueries(runner);
+    if (hasTables(runner, "fineFoodReviews")) {
+      runVectorQueryExamples(runner);
+    }
+  }
 
-    String q2 =
-        "select group_city, sum(rsvp_count) from meetupRsvp group by group_city order by sum(rsvp_count) desc limit 10";
-    printStatus(Color.YELLOW, "Top 10 cities with the most rsvp");
-    printStatus(Color.CYAN, "Query : " + q2);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q2)));
-    printStatus(Color.GREEN, "***************************************************");
+  private void runMeetupRsvpQueries(QuickstartRunner runner)
+      throws Exception {
+    if (!hasTables(runner, "meetupRsvp")) {
+      return;
+    }
+    printStatus(Color.YELLOW, "***** Meetup RSVPs *****");
+    runAndPrintQuery(runner, "Total number of documents in the table", "select count(*) from meetupRsvp limit 1");
+    runAndPrintQuery(runner, "Top 10 cities with the most rsvp", "select group_city, sum(rsvp_count) from meetupRsvp "
+        + "group by group_city order by sum(rsvp_count) desc limit 10");
+    runAndPrintQuery(runner, "Show 10 most recent rsvps", "select * from meetupRsvp order by mtime limit 10");
+    runAndPrintQuery(runner, "Show top 10 rsvp'ed events", "select event_name, sum(rsvp_count) from meetupRsvp "
+        + "group by event_name order by sum(rsvp_count) desc limit 10");
+  }
 
-    String q3 = "select * from meetupRsvp order by mtime limit 10";
-    printStatus(Color.YELLOW, "Show 10 most recent rsvps");
-    printStatus(Color.CYAN, "Query : " + q3);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q3)));
-    printStatus(Color.GREEN, "***************************************************");
+  private void runJsonIndexQueries(QuickstartRunner runner)
+      throws Exception {
+    if (!hasTables(runner, "meetupRsvpJson")) {
+      return;
+    }
+    printStatus(Color.YELLOW, "***** JSON index *****");
+    runAndPrintQuery(runner, "Events related to topic_name0",
+        "select json_extract_scalar(event_json, '$.event_name', 'STRING') from meetupRsvpJson where json_match"
+            + "(group_json, '\"$.group_topics[*].topic_name\"=''topic_name0''') limit 10");
+  }
 
-    String q4 =
-        "select event_name, sum(rsvp_count) from meetupRsvp group by event_name order by sum(rsvp_count) desc limit 10";
-    printStatus(Color.YELLOW, "Show top 10 rsvp'ed events");
-    printStatus(Color.CYAN, "Query : " + q4);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q4)));
-    printStatus(Color.GREEN, "***************************************************");
+  private void runComplexTypeQueries(QuickstartRunner runner)
+      throws Exception {
+    if (!hasTables(runner, "meetupRsvpComplexType")) {
+      return;
+    }
+    printStatus(Color.YELLOW, "***** Complex type handling *****");
+    runAndPrintQuery(runner, "Flattened group topics",
+        "select \"group.group_topics.urlkey\", \"group.group_topics.topic_name\", \"group.group_id\" from "
+            + "meetupRsvpComplexType limit 10");
+  }
 
-    String q5 = "select count(*) from meetupRsvp limit 1";
-    printStatus(Color.YELLOW, "Total number of documents in the table");
-    printStatus(Color.CYAN, "Query : " + q5);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q5)));
-    printStatus(Color.GREEN, "***************************************************");
+  private void runUpsertQueries(QuickstartRunner runner)
+      throws Exception {
+    if (!hasTables(runner, "upsertMeetupRsvp")) {
+      return;
+    }
+    printStatus(Color.YELLOW, "***** Upsert *****");
+    printStatus(Color.YELLOW, "***** The expected number of documents per event_id is 1 *****");
+    runAndPrintQuery(runner, "Total number of documents per event_id in the table",
+        "select event_id, count(*) from upsertMeetupRsvp group by event_id limit 10");
+  }
 
-    String q6 = "select count(*) from fineFoodReviews";
-    printStatus(Color.YELLOW, "Total number of documents in fineFoodReviews");
-    printStatus(Color.CYAN, "Query : " + q6);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q6)));
-    printStatus(Color.GREEN, "***************************************************");
+  private void runUpsertJsonIndexQueries(QuickstartRunner runner)
+      throws Exception {
+    if (!hasTables(runner, "upsertJsonMeetupRsvp")) {
+      return;
+    }
+    printStatus(Color.YELLOW, "***** Upsert with JSON index *****");
+    runAndPrintQuery(runner, "Events related to topic_name0",
+        "select json_extract_scalar(event_json, '$.event_name', 'STRING') from upsertJsonMeetupRsvp where json_match"
+            + "(group_json, '\"$.group_topics[*].topic_name\"=''topic_name0''') limit 10");
+  }
 
-    String q7 = "select count(*) from \"fineFoodReviews-federated\"";
-    printStatus(Color.YELLOW, "Total number of documents in fineFoodReviews-federated");
-    printStatus(Color.CYAN, "Query : " + q7);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q7)));
-    printStatus(Color.GREEN, "***************************************************");
+  private void runPartialUpsertQueries(QuickstartRunner runner)
+      throws Exception {
+    if (!hasTables(runner, "upsertPartialMeetupRsvp")) {
+      return;
+    }
+    // The expected behavior for total number of documents per PK should be 1.
+    // The expected behavior for total number of rsvp_counts per PK should >=1 since it's incremented and updated.
+    // The expected behavior for nums of values in group_name fields should equals to rsvp_counts.
+    printStatus(Color.YELLOW, "***** Partial upsert *****");
+    printStatus(Color.YELLOW, "***** The expected behavior for total number of documents per PK should be 1 *****");
+    printStatus(Color.YELLOW,
+        "***** The expected behavior for total number of rsvp_counts per PK should >=1 since it's incremented and "
+            + "updated. *****");
+    printStatus(Color.YELLOW,
+        "***** The expected behavior for nums of values in group_name fields should equals to rsvp_counts. *****");
+    runAndPrintQuery(runner, "Total number of documents, total number of rsvp_counts per event_id in the table",
+        "select event_id, count(*), sum(rsvp_count) from upsertPartialMeetupRsvp group by event_id order by sum"
+            + "(rsvp_count) desc limit 10");
 
-    String q8 = "select count(*) from \"fineFoodReviews_part_0\"";
-    printStatus(Color.YELLOW, "Total number of documents in fineFoodReviews_part_0");
-    printStatus(Color.CYAN, "Query : " + q8);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q8)));
-    printStatus(Color.GREEN, "***************************************************");
+    printStatus(Color.YELLOW,
+        "***** Nums of values in group_name fields should less than or equals to rsvp_count. Duplicate records are "
+            + "not allowed. *****");
+    printStatus(Color.YELLOW,
+        "***** Nums of values in venue_name fields should equals to rsvp_count. Duplicates are allowed. *****");
+    runAndPrintQuery(runner, "Event_id, group_name, venue_name, rsvp_count per event_id in the table",
+        "select event_id, group_name, venue_name, rsvp_count from upsertPartialMeetupRsvp where rsvp_count > 1 order "
+            + "by rsvp_count desc limit 10");
+  }
 
-    String q9 = "select count(*) from \"fineFoodReviews_part_1\"";
-    printStatus(Color.YELLOW, "Total number of documents in fineFoodReviews_part_1");
-    printStatus(Color.CYAN, "Query : " + q9);
-    printStatus(Color.YELLOW, prettyPrintResponse(runner.runQuery(q9)));
-    printStatus(Color.GREEN, "***************************************************");
-
-    runVectorQueryExamples(runner);
+  private void runFineFoodReviewsQueries(QuickstartRunner runner)
+      throws Exception {
+    if (!hasTables(runner, "fineFoodReviews", "fineFoodReviews_part_0", "fineFoodReviews_part_1")) {
+      return;
+    }
+    printStatus(Color.YELLOW, "***** Fine food reviews *****");
+    runAndPrintQuery(runner, "Total number of documents in fineFoodReviews", "select count(*) from fineFoodReviews");
+    runAndPrintQuery(runner, "Total number of documents in fineFoodReviews-federated",
+        "select count(*) from \"fineFoodReviews-federated\"");
+    runAndPrintQuery(runner, "Total number of documents in fineFoodReviews_part_0",
+        "select count(*) from \"fineFoodReviews_part_0\"");
+    runAndPrintQuery(runner, "Total number of documents in fineFoodReviews_part_1",
+        "select count(*) from \"fineFoodReviews_part_1\"");
   }
 
   public void execute()
